--- a/app/src/main/res/layout/activity_civic.xml
+++ b/app/src/main/res/layout/activity_civic.xml
@@ -8,7 +8,7 @@
 
 
     <ImageButton
-        android:id="@+id/imageButton7"
+        android:id="@+id/menu3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
@@ -25,7 +25,7 @@
         android:text="NyewaKuys"
         android:textColor="@color/black"
         android:textSize="24dp"
-        app:layout_constraintStart_toEndOf="@+id/imageButton7"
+        app:layout_constraintStart_toEndOf="@+id/menu3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
